# Breeze

./: .gitignore  .mailmap  CONTRIBUTING.md  Makefile  README.md  eslint.config.mjs  install.sh  package.json
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml  release.yml
breeze-browser/: README.md  breeze.js
breeze-browser/examples/: hello.html  table.html
breeze-node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
breeze-node/src/: cli.ts  examples.ts  highlighter.ts  index.ts  interpreter.ts  lexer.ts  parser.ts  types.ts
breeze-node/tests/: features.js  run.js
breeze-python/: README.md  pyproject.toml
breeze-python/examples/: call_breeze.py
breeze-python/src/breeze_lang/: __init__.py  cli.py
breeze-rs/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
breeze-rs/examples/: break_continue.bz  conditions.bz  fizzbuzz.bz  functions.bz  hello.bz  interpolation.bz  lists.bz  loops.bz  recursion.bz  strings.bz  text_methods.bz  variables.bz  while_elif.bz
breeze-rs/src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs
breeze-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
breeze-vscode/snippets/: breeze.json
breeze-vscode/src/: extension.ts
deploy/: .dockerignore  DEPLOY.md  Dockerfile  README.md  deploy-vm.sh  render.yaml  vercel-api.ts  vercel.json
docs/: LANGUAGE_SPEC.md  PACKAGES.md  PUBLISHING.md
logo/: README.md
scripts/: pre-publish.sh
(+43 files in other folders)
